[FIX] font too small

--- a/react-api-project-master/src/App.css
+++ b/react-api-project-master/src/App.css
@@ -2,6 +2,7 @@
 .App {
   width: 960px;
   margin: auto;
+  font-size: 30px;
 }
 
 input[type=text] {
